--- a/app/src/main/res/drawable/text_view_background.xml
+++ b/app/src/main/res/drawable/text_view_background.xml
@@ -1,8 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <layer-list xmlns:android="http://schemas.android.com/apk/res/android">
-    <item
-        android:right="-2dp"
-        android:left="-2dp">
+    <item>
         <shape>
             <padding
                 android:left="@dimen/qb_px_10"
