--- a/app/src/main/res/layout/setting.xml
+++ b/app/src/main/res/layout/setting.xml
@@ -91,15 +91,22 @@
                     android:text="字体类型选择:"
                     android:textSize="@dimen/qb_px_20" />
 
-                <SeekBar
-                    android:id="@+id/text_style"
-                    android:layout_width="@dimen/qb_px_200"
-                    android:layout_height="wrap_content"
-                    android:layout_gravity="center_vertical"
-                    android:background="@drawable/draw_bar_xml"
-                    android:thumb="@drawable/slider_xml"
-                    android:max="4"
-                    android:progress="0"/>
+                <LinearLayout
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content">
+                    <SeekBar
+                        android:id="@+id/text_style"
+                        android:layout_width="@dimen/qb_px_200"
+                        android:layout_height="wrap_content"
+                        android:layout_gravity="center_vertical"
+                        android:background="@drawable/draw_bar_xml"
+                        android:thumb="@drawable/slider_xml"
+                        android:max="4"
+                        android:progress="0"/>
+
+                </LinearLayout>
+
+
             </TableRow>
 
 
